--- a/Android-Social-Player-App/res/layout/song.xml
+++ b/Android-Social-Player-App/res/layout/song.xml
@@ -4,13 +4,14 @@
   android:layout_height="wrap_content"
   android:onClick="songPicked"
   android:orientation="vertical"
-  android:padding="5dp" >
+  android:padding="5dp"
+  android:divider="#FFCC00"
+  android:dividerHeight="2dp" >
  
   <TextView
     android:id="@+id/song_title"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textColor="#FFFFFF99"
     android:textSize="20sp"
     android:textStyle="bold" />
  
@@ -18,7 +19,6 @@
     android:id="@+id/song_artist"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textColor="#FFFFFF99"
     android:textSize="18sp" />
  
 </LinearLayout>
