--- a/Android-Social-Player-App/res/layout/song.xml
+++ b/Android-Social-Player-App/res/layout/song.xml
@@ -1,24 +1,55 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="fill_parent"
-  android:layout_height="wrap_content"
-  android:onClick="songPicked"
-  android:orientation="vertical"
-  android:padding="5dp"
-  android:divider="#FFCC00"
-  android:dividerHeight="2dp" >
- 
-  <TextView
-    android:id="@+id/song_title"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
+    android:orientation="horizontal"
+    android:padding="5dip"
+  android:onClick="songPicked" >
+ 
+    <LinearLayout android:id="@+id/thumbnail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="3dip"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="5dip">
+ 
+        <ImageView
+            android:id="@+id/album_img"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:src="@drawable/ic_launcher"/>
+ 
+    </LinearLayout>
+    
+  <TextView
+    android:id="@+id/song_title"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignTop="@+id/thumbnail"
+    android:layout_toRightOf="@+id/thumbnail"
+    android:textColor="#040404"
+    android:typeface="sans"
+    android:textSize="15sp"
     android:textStyle="bold" />
  
   <TextView
     android:id="@+id/song_artist"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textSize="18sp" />
- 
-</LinearLayout>
+    android:layout_below="@id/song_title"
+    android:textSize="12sp"
+    android:layout_marginTop="1dip"
+    android:layout_toRightOf="@+id/thumbnail" />
+ 	
+  <TextView
+        android:id="@+id/song_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/song_title"
+        android:gravity="right"
+        android:text="0:00"
+        android:layout_marginRight="5dip"
+        android:textSize="12sp"
+        android:textColor="#10bcc9"
+        android:textStyle="bold"/>
+</RelativeLayout>
