--- a/Android-Social-Player-App/res/layout/activity_discover_devices.xml
+++ b/Android-Social-Player-App/res/layout/activity_discover_devices.xml
@@ -11,6 +11,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+        android:text="@string/peer_title" />
+    
+	<ListView
+    android:id="@+id/peer_list"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
+  </ListView>
+  
 </RelativeLayout>
